# cfo-ai

./: .gitignore  Makefile  README.md  pyproject.toml
cfo_ai/modules/: chat_history.py  chatbot.py  chatbot_utils.py  doc_utils.py  embeddings.py  sidebar.py
cfo_ai/prompts/: qa_templates.py
cfo_ai/streamlit/: local_app.py
